image: Ensure contrast for transparent images
Determine if the image is transparent and has low
contrast with default background color. If so,
use a different background color.

Closes #31

Part-of: <https://gitlab.gnome.org/Incubator/loupe/-/merge_requests/151>

--- a/data/style.css
+++ b/data/style.css
@@ -4,38 +4,8 @@ button.osd.circular {
   min-height: 42px;
 }
 
-.image-view {
-  background-color: @theme_base_color;
-}
-
 flap.fullscreen-widget dimming, shadow, border, outline {
   background: none;
-}
-
-.checkerboard {
-  background-color: #7f7f7f;
-  background-image: linear-gradient(
-	  45deg,
-	  #cccccc 25%,
-	  transparent 25%
-  ),
-  linear-gradient(
-	  -45deg,
-	  #cccccc 25%,
-	  transparent 25%
-  ),
-  linear-gradient(
-	  45deg,
-	  transparent 75%,
-	  #cccccc 75%
-  ),
-  linear-gradient(
-  	-45deg,
-	  transparent 75%,
-	  #cccccc 75%
-  );
-  background-size: 20px 20px;
-  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
 }
 
 row.property label.title {
